--- a/public/css/styleImc.css
+++ b/public/css/styleImc.css
@@ -58,3 +58,78 @@
     text-align: center;
     font-size: larger;
 }
+
+.sidebar {
+    height: 100%;
+    width: 250px;
+    position: fixed;
+    top: 0;
+    left: -250px; /* Inicialmente escondido */
+    background-color: #333;
+    color: #fff;
+    padding: 15px;
+    transition: left 0.3s ease; /* Transição suave para a animação */
+}
+
+.sidebar.show {
+    left: 0; /* Mostra o painel quando a classe 'show' é adicionada */
+}
+
+.sidebar h2 {
+    text-align: center;
+}
+
+.sidebar ul {
+    list-style-type: none;
+    padding: 0;
+}
+
+.sidebar ul li {
+    margin: 15px 0;
+}
+
+.sidebar ul li a {
+    color: #fff;
+    text-decoration: none;
+    display: block;
+    padding: 10px;
+}
+
+.sidebar ul li a:hover {
+    background-color: #575757;
+}
+
+.sidebar button {
+    display: block;
+    margin: 20px auto;
+    padding: 10px 20px;
+    background-color: #444;
+    color: #fff;
+    border: none;
+    cursor: pointer;
+}
+
+.sidebar button:hover {
+    background-color: #575757;
+}
+
+.content {
+    margin-left: 0;
+    padding: 15px;
+}
+
+.content button {
+    padding: 10px 20px;
+    background-color: #444;
+    color: #fff;
+    border: none;
+    cursor: pointer;
+}
+
+.content button:hover {
+    background-color: #575757;
+}
+
+.content.open {
+    margin-left: 250px;
+}
