--- a/public/css/styleImc.css
+++ b/public/css/styleImc.css
@@ -69,6 +69,7 @@
     color: #fff;
     padding: 15px;
     transition: left 0.3s ease; /* Transição suave para a animação */
+    z-index: 1000;
 }
 
 .sidebar.show {
