--- a/public/css/styleImc.css
+++ b/public/css/styleImc.css
@@ -22,6 +22,7 @@
     font-family: sans-serif;
     font-size: 1rem;
 }
+
 #sombra{
     border: none;
     border-radius: 10px;
@@ -133,4 +134,44 @@
 
 .content.open {
     margin-left: 250px;
+}
+
+/* Para dispositivos móveis */
+@media (max-width: 768px) {
+    .formulario {
+        width: 90%;
+    }
+
+    .sidebar {
+        transform: translateX(-250px);
+        position: fixed;
+        width: 100%;
+        height: 100%;
+        z-index: 1000;
+        overflow-y: auto;
+        transition: transform 0.3s ease;
+    }
+
+    #open-btn {
+        display: block;
+    }
+
+    #close-btn {
+        display: block;
+    }
+}
+
+/* Para dispositivos muito pequenos (smartphones em modo retrato) */
+@media (max-width: 480px) {
+    .formulario {
+        width: 80%;
+    }
+
+    #open-btn {
+        font-size: 20px;
+    }
+
+    #close-btn {
+        font-size: 20px;
+    }
 }
