organização das funcionalidades backend

--- a/public/css/styleLogin.css
+++ b/public/css/styleLogin.css
@@ -25,7 +25,7 @@ body {
 p{
     text-align: center;
     font-family: sans-serif;
-    color:#9b59b6;
+    color:#494BF5;
     font-weight: bolder;
 }
 
