--- a/public/css/styleImc.css
+++ b/public/css/styleImc.css
@@ -59,7 +59,12 @@
     text-align: center;
     font-size: larger;
 }
-
+#close-btn{
+    position:relative;
+    top: 0;
+    left: 70px;
+    border-radius:10px;
+}
 .menuMobile{
     z-index: 1000;
     position:fixed;
@@ -77,6 +82,7 @@
 
 
 .sidebar {
+   
     height: 100%;
     width: 250px;
     position: fixed;
